--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScpTc-NS4JbBkaugjWEng-Jt7lYwHfDo2JStR6jLowF8QGflg/viewform?embedded=true" width="640" height="1043" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+<h1>Delron sucks</h1>
