--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg); filter: brightness(0.8);">
+          <div class="carousel-item active" style="background-image: url(assets/img/slide/hi.webp); filter: brightness(0.8);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Grow Your Online Presence</h2>
