small page1 changes

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
           <div class="carousel-item active" style="background-image: url(assets/img/slide/bg.webp); filter: brightness(0.8);">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Grow Your Online Presence</h2>
-                <p class="animate__animated animate__fadeInUp">Welcome to EasyPortfolios, the place where you can effortlessly enhance your online presence with a personalized portfolio website that belongs to you!</p>
-                <p class="animate__animated animate__fadeInUp">And now you’re probably thinking to yourself: 'I know I should have one but how do I create a personal website?' Thats where this platform comes in! Here is an example of my own <a style="color: red;" href="https://delanomartin.com/" target="_blank">portfolio website</a></p>  
+                <h2 class="">Grow Your Online Presence</h2>
+                <p class=" ">Welcome to EasyPortfolios, the place where you can effortlessly enhance your online presence with a personalized portfolio website that belongs to you!</p>
+                <p class="">And now you’re probably thinking to yourself: 'I know I should have one but how do I create a personal website?' Thats where this platform comes in! Here is an example of my own <a style="color: red;" href="https://delanomartin.com/" target="_blank">portfolio website</a></p>  
                 <div>
-                  <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+                  <a href="#about" class="btn-get-started">Read More</a>
                 </div>
               </div>
             </div>
