--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="col-lg-4 col-md-6 icon-box">
            
             <h4 class="title">4. Make Payment:</h4>
-            <p class="description">Once you've provided the necessary details, you will receive banking details to make the payment. Send us the proof of payment and your site will be live as soon as we are done with it. </p>
+            <p class="description">Once you've provided the necessary details, a link will be sent to your email address where you can make payment. We use <a href="https://www.payfast.co.za/">PayFast</a> for simple and secure payments. </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box">
            
