--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="col-lg-4 col-md-6 icon-box">
             
             <h4 class="title">3. Share Your Details:</h4>
-            <p class="description">Fill out the form below to get in touch with us. We'll respond promptly, and you can provide your choice of template, website name, and all relevant details we need to get your site started.  </p>
+            <p class="description">Fill out the form below to get in touch with us. We'll send you an email on how to proceed, and you can provide your choice of template, website name, and all relevant details we need to get your site started.  </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box">
            
