sentence error Student deal

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
               <h3>Student <i style="color: red;">*</i> </h3>
               <h4>R500</h4>
               <ul>
-                <li>Only available to students currenlty in enrolled in a tertirary institution</li>
+                <li>Only available to students currenlty enrolled in a tertirary institution</li>
                
               </ul>
              
