description and keywords

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <!--
     Enter webpage description and keywords here
   -->
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Enhance your online presence with a personalized portfolio website. Showcase your work, projects,education and skills. Take control of your brand and create a positive online presence." name="description">
+  <meta name="keywords" content="portfolio website, online presence, showcase work, projects, skills, personal brand, positive online presence, professional CV, career opportunities">
 
   
 
