--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  
+
 
   
 </head>
@@ -510,7 +512,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1"> What if I need support or assistance with my site after some time?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  We're here to help! If you need any support or assistance with your portfolio website, simply reach out to us through the contact form on our website or send us a WhatsApp message. Please include your customer number, which you received via email when you initially made the payment.
+                  We're here to help! If you need any support or assistance with your portfolio website, simply reach out to us through the contact form on our website or send us a WhatsApp message.
                 </p>
               </div>
             </li>
