--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
             </li>
 
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">What payment methods do you accept?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-2">What payment methods do you accept?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-2" class="collapse show" data-bs-parent=".faq-list">
                 <p>
                   We use PayFast for simple and secure payments. PayFast supports various payment methods, including credit/debit cards and instant EFT.
                 </p>
@@ -500,8 +500,8 @@
             </li>
 
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Do you provide ongoing maintenance for the website, what if I have new things I wanna add to my site?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-3">Do you provide ongoing maintenance for the website, what if I have new things I wanna add to my site?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-3" class="collapse show" data-bs-parent=".faq-list">
                 <p>
                   Yes, we offer ongoing maintenance services at a minimal cost of R75 per update. We ensure your website is always up to date and running smoothly.
                 </p>
@@ -509,8 +509,8 @@
             </li>
 
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1"> What if I need support or assistance with my site after some time?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-4"> What if I need support or assistance with my site after some time?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-4" class="collapse show" data-bs-parent=".faq-list">
                 <p>
                   We're here to help! If you need any support or assistance with your portfolio website, simply reach out to us through the contact form on our website or send us a WhatsApp message.
                 </p>
@@ -518,14 +518,16 @@
             </li>
 
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1"> When and how do i make payment?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-5"> When and how do i make payment?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-5" class="collapse show" data-bs-parent=".faq-list">
                 <p>
                   After you provide us with all the details needed to get your site started, we send you a link via email to make payment. 
                 </p>
 
               </div>
             </li>
+
+            <!-- When i click one of these dropdowns on my page, all of them collapse. I can fix this by-->
 
            
 
