--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 
             <li data-aos="fade-up">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-0"> What can I display on my website?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-0" class="collapse show" data-bs-parent=".faq-list">
+              <div id="faq-list-0" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Here are some key elements you can include on your website, but not limited to:
                 </p>
