Add favicon to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   -->
   <meta content="Enhance your online presence with a personalized portfolio website. Showcase your work, projects,education and skills. Take control of your brand and create a positive online presence." name="description">
   <meta name="keywords" content="portfolio website, online presence, showcase work, projects, skills, personal brand, positive online presence, professional CV, career opportunities">
-
+  <link rel="shortcut icon" type="image/png" href="assets/img/logo/svg/logo-no-background.svg"/>
   
 
   <!-- Google Fonts -->
