Remove old favicon and add new favicon

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
   -->
   <meta content="Enhance your online presence with a personalized portfolio website. Showcase your work, projects,education and skills. Take control of your brand and create a positive online presence." name="description">
   <meta name="keywords" content="portfolio website, online presence, showcase work, projects, skills, personal brand, positive online presence, professional CV, career opportunities">
-  <link rel="shortcut icon" type="image/png" href="assets/img/logo/svg/logo-no-background.svg"/>
-  
+  <link rel="icon" type="image/x-icon" href="/assets/img/favicon/favicon.ico">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
