Add favicon and update meta tags

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
   <meta name="description" content="Enhance your online presence with a personalized portfolio website. Showcase your work, projects, education, and skills. Take control of your brand and create a positive online presence to unlock new career opportunities.">
   <meta name="keywords" content="portfolio website, online presence, showcase work, projects, education, skills, personal brand, positive online presence, professional CV, career opportunities">
-  <link rel="icon" href="favicon.png">
+
+<!--Favicons-->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
