--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   -->
 
   <meta name="description" content="Enhance your online presence with a personalized portfolio website. Showcase your work, projects, education, and skills. Take control of your brand and create a positive online presence to unlock new career opportunities.">
-  <meta name="keywords" content="portfolio website, online presence, showcase work, projects, education, skills, personal brand, positive online presence, professional CV, career opportunities">
+  <meta name="keywords" content="portfolio website, online presence, showcase work, projects, education, skills, personal brand, positive online presence, professional CV, career opportunities, easy portfolios">
 
 <!--Favicons-->
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
