--- a/index.html
+++ b/index.html
@@ -362,6 +362,17 @@
         </div>
 
       </div>
+
+      <!--Note message that says that the templates are just for display and that any section can be replaced with a section of your choice-->
+      <div style="text-align: center;">
+        <p style="color: red;">Note: The templates above are just for display purposes, any section can be replaced with a section of your choice.</p>
+      </div>
+
+      
+
+      <!---->
+
+
     </section><!-- End Portfolio Section -->
 
    
