Update note message in index.html

--- a/index.html
+++ b/index.html
@@ -363,10 +363,10 @@
 
       </div>
 
-      <!--Note message that says that the templates are just for display and that any section can be replaced with a section of your choice-->
       <div style="text-align: center;">
-        <p style="color: red;">Note: The templates above are just for display purposes, any section can be replaced with a section of your choice.</p>
+        <p style="color: red;">Please Note: The templates showcased above are for illustrative purposes only. You have complete freedom to customize and personalize each section according to your preferences.</p>
       </div>
+      
 
       
 
