Add canonical link to index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     Enter webpage description and keywords here
   -->
 
+  
+
+  <link rel="canonical" href="https://easyportfolios.co.za" />
+
   <meta name="description" content="Enhance your online presence with a personalized portfolio website. Showcase your work, projects, education, and skills. Take control of your brand and create a positive online presence to unlock new career opportunities.">
   <meta name="keywords" content="portfolio website, online presence, showcase work, projects, education, skills, personal brand, positive online presence, professional CV, career opportunities, easy portfolios">
 
