Update website title and description

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>EasyPortfolios</title>
+  <title>EasyPortfolios: Create Personalized Portfolio Websites for a Professional Online Presence</title>
   <!--
     Enter webpage description and keywords here
   -->
@@ -24,7 +24,7 @@
 
   <link rel="canonical" href="https://easyportfolios.co.za" />
 
-  <meta name="description" content="Enhance your online presence with a personalized portfolio website. Showcase your work, projects, education, and skills. Take control of your brand and create a positive online presence to unlock new career opportunities.">
+  <meta name="description" content="Enhance your online presence with a personalized portfolio website. Showcase your work, projects, education, and skills. Take control of your online brand.">
   <meta name="keywords" content="portfolio website, online presence, showcase work, projects, education, skills, personal brand, positive online presence, professional CV, career opportunities, easy portfolios">
 
 <!--Favicons-->
@@ -200,7 +200,7 @@
           <div class="col-lg-4 col-md-6 icon-box">
            
             <h4 class="title">5.Almost ready! </h4>
-            <p class="description"><b>We'll ensure your site is up and running within <i>2-3 business days</i>, and in case of any delays, we'll promptly communicate with you.</b></p>
+            <p class='description'><b>Get your site live in <i>2-3 business days</i>. We'll communicate promptly if any delays occur.</b></p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box">
            
@@ -524,7 +524,7 @@
             </li>
 
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-3">Do you provide ongoing maintenance for the website, what if I have new things I wanna add to my site?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-3">Do you provide ongoing maintenance for the website, what if I have new things I want to add to my site?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Yes, we offer ongoing maintenance services at a minimal cost of R75 per update. We ensure your website is always up to date and running smoothly.
