--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background-image: url(assets/img/slide/bg.webp); filter: brightness(0.8);">
+          <div class="carousel-item active" style="background-image: url(assets/img/slide/bg5.jpeg); filter: brightness(0.8);">
             <div class="carousel-container">
               <div class="carousel-content">
                 
