Update website heading

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         
           <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
-              <h3 style="align-items: center; justify-content: center; text-align: center;">Why do you need your own website?</h3>
+              <h3 style="align-items: center; justify-content: center; text-align: center;">Why you need your own website!</h3>
               <p style="text-align: center;">
                 Let's explore why having your own website is a game-changer in today's interconnected world.
               </p>
