Update contact section in index.html

--- a/index.html
+++ b/index.html
@@ -559,13 +559,62 @@
 
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact" >
       <div class="container">
 
         <div class="section-title">
           <h2>Contact</h2>
      
         </div>
+
+        <!--Email and cellphone number and whatsapp-->
+
+
+        <div class="row" style="display: flex; justify-content: center; align-items: center; text-align: center;">
+          <div class="col-lg-4 col-md-6">
+            <div class="info-box mb-4">
+              <i class="bx bx-envelope"></i>
+              <h3>Email</h3>
+              <p>
+                <a href="mailto:" style="color: black;">
+
+                  <script type="text/javascript">
+                    var username = "contact";
+                    var hostname = "easyportfolios.co.za";
+                    var linktext = username + "@" + hostname ;
+                    document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+                  </script>
+                </a>
+              </p>
+            </div>
+          </div>
+
+          <!--Phone number-->
+
+          <div class="col-lg-4 col-md-6" >
+            <div class="info-box  mb-4">
+              <i class="bx bx-phone-call"></i>
+              <h3>Call</h3>
+              <p><a href="tel:+27 76 473 7275" style="color: black;">+27 76 473 7275</a></p>
+            </div>
+
+          </div>
+
+          <!--Whatsapp-->
+          <div class="col-lg-4 col-md-6" >
+            <div class="info-box  mb-4">
+              <i class="bx bxl-whatsapp"></i>
+              <h3>Whatsapp</h3>
+              <p><a href="https://wa.me/27764737275" style="color: black;">+27 76 473 7275</a></p>
+            </div>
+
+
+        </div>
+
+
+
+
+
 
         <div style="display: flex; justify-content: center;">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeAb8dCEyn88ys9XenAC_mUKzO2EiMossI6__iKd7rBXzyu4A/viewform?embedded=true" width="640" height="913" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
