Fix typo in FAQ question

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
             </li>
 
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-4"> What if I need support or assistance with my site after some time?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-4"> What if I need support or assistance with my site?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   We're here to help! If you need any support or assistance with your portfolio website, simply reach out to us through the contact form on our website or send us a WhatsApp message.
