--- a/index.html
+++ b/index.html
@@ -451,6 +451,15 @@
               </div>
             </li>
 
+            <li data-aos="fade-up">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Why does my site need to be renewed annually?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-0" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  The R120 annual renewal sustains domain registration to ensure your website remains accessible on the internet.
+                </p>
+              </div>
+            </li>
+
 
             <li data-aos="fade-up">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">If I have a specific question, how can I speak to someone on the team?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
@@ -492,7 +501,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-5"> When and how do i make payment?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  After you provide us with all the details needed to get your site started, we send you a link via email to make payment. 
+                  After you provide us with all the details needed to get your site started, we send you a link to make payment. 
                 </p>
 
               </div>
