Fix formatting of phone number and WhatsApp links

--- a/index.html
+++ b/index.html
@@ -558,24 +558,24 @@
             </div>
           </div>
 
-          <!--Phone number-->
+        <!-- Phone number -->
+<div class="col-lg-4 col-md-6">
+  <div class="info-box mb-4">
+      <i class="bx bx-phone-call"></i>
+      <h3>Call</h3>
+      <p><a href="tel:+27764737275">+27 76 473 7275</a></p>
+  </div>
+</div>
 
-          <div class="col-lg-4 col-md-6" >
-            <div class="info-box  mb-4">
-              <i class="bx bx-phone-call"></i>
-              <h3>Call</h3>
-              <p><a href="tel:+27 76 473 7275" style="color: black;">+27 76 473 7275</a></p>
-            </div>
+<!-- Whatsapp -->
+<div class="col-lg-4 col-md-6">
+  <div class="info-box mb-4">
+      <i class="bx bxl-whatsapp"></i>
+      <h3>Whatsapp</h3>
+      <p><a href="https://wa.me/27764737275">+27 76 473 7275</a></p>
+  </div>
+</div>
 
-          </div>
-
-          <!--Whatsapp-->
-          <div class="col-lg-4 col-md-6" >
-            <div class="info-box  mb-4">
-              <i class="bx bxl-whatsapp"></i>
-              <h3>Whatsapp</h3>
-              <p><a href="https://wa.me/27764737275" style="color: black;">+27 76 473 7275</a></p>
-            </div>
 
 
         </div>
