Update page title and remove development notice

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>EasyPortfolios: Create Personalized Portfolio Websites for a Professional Online Presence</title>
+  <title>EasyPortfolios: Personalized Portfolio Websites for a Professional Online Presence</title>
   <!--
     Enter webpage description and keywords here
   -->
@@ -224,7 +224,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio Templates(Still in development, check back soon)</h2>
+          <h2>Portfolio Templates</h2>
           <p>Take a look at our selection of templates below, where you can click on each template to see a preview of how your site will look. If you can't find exactly what you're looking for, let us know.</p>
         </div>
 
