Update portfolio website content

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="carousel-content">
                 
                 <h2 class="">Grow Your Online Presence</h2>
-                <p class=" ">Welcome to EasyPortfolios, the place where you can effortlessly enhance your online presence with a personalized portfolio website that belongs to you!</p>
+                <p class=" ">Welcome to EasyPortfolios, the place where you can effortlessly enhance your online presence with a personalized portfolio website.</p>
                 <p class="">And now you’re probably thinking to yourself: 'I know I should have one but how do I create a personal website?' Thats where this platform comes in! Here is an example of my own <a style="color: red;" href="https://delanomartin.com/" target="_blank">portfolio website</a></p>  
                 <div>
                   <a href="#about" class="btn-get-started">Read More</a>
