--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 
                 <h2 class="">Grow Your Online Presence</h2>
                 <p class=" ">Welcome to EasyPortfolios, the place where you can effortlessly enhance your online presence with a personalized portfolio website.</p>
-                <p class="">And now you’re probably thinking to yourself: 'I know I should have one but how do I create a personal website?' Thats where this platform comes in! Here is an example of my own <a style="color: red;" href="https://delanomartin.com/" target="_blank">portfolio website</a></p>  
+                <p class="">And now you’re probably thinking to yourself: 'I know I should have one but how do I create a personal website?' Thats where this platform comes in!</a></p>  
                 <div>
                   <a href="#about" class="btn-get-started">Read More</a>
                 </div>
