Update portfolio order description

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box">
             <h4 class="title">4. Finalize Your Order:</h4>
-            <p class="description">Look out for a payment link to complete your order. Our trusted payment gateway, <a href="https://www.payfast.co.za/">PayFast</a>, guarantees a secure and straightforward transaction process.</p>
+            <p class="description">After receiving your portfolio details, look out for a payment link to complete your order. Our trusted payment gateway, <a href="https://www.payfast.co.za/">PayFast</a>, guarantees a secure and straightforward transaction process.</p>
             
           </div>
           <div class="col-lg-4 col-md-6 icon-box">
