Update contact information and description in Connect with us section

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="col-lg-4 col-md-6 icon-box">
             
             <h4 class="title">3. Connect with us</h4>
-            <p class="description"> Please fill out the form below or contact us via WhatsApp using the number provided. Once you've reached out, we'll guide you through the next steps.  </p>
+            <p class="description"> Fill out the provided form or contact us via WhatsApp using the specified number. We'll request your CV to gather essential details for your site. </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box">
             <h4 class="title">4. Finalize Your Order:</h4>
