Update team information

--- a/index.html
+++ b/index.html
@@ -603,7 +603,8 @@
 
       <div class="section-title">
         <h2>Team</h2>
-        <h4>Founder and Owner: <a href="https://delanomartin.com">Delano Martin</a> </h4>
+        <h4>Founder: <a href="https://delanomartin.com">Delano Martin</a> </h4>
+        <h4>Design Assistant: <a href="https://www.linkedin.com/in/kayisha-naidoo-90a821270/">Kayisha Naidoo</a> </h4>
       </div>
       
     
