Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
       <nav  id="navbar" class="navbar">
         <ul>
           <li><a style="font-family:Poppins-Medium" class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a style="font-family:Poppins-Medium" class="nav-link scrollto" href="#about">Why</a></li>
-          <li><a style="font-family:Poppins-Medium" class="nav-link scrollto" href="#services">How</a></li>
+          <li><a style="font-family:Poppins-Medium" class="nav-link scrollto" href="#about">About</a></li>
           <li><a style="font-family:Poppins-Medium" class="nav-link scrollto " href="#portfolio">Templates</a></li>
           <li><a style="font-family:Poppins-Medium" class="nav-link scrollto" href="#pricing">Pricing</a></li>
           <li><a style="font-family:Poppins-Medium" class="nav-link scrollto" href="#faq">FAQ</a></li>
